feat(flavor, filterFile): flavor and filterFile args were supported

--- a/action.yaml
+++ b/action.yaml
@@ -34,6 +34,12 @@ inputs:
   isolated:
     description: "Run each test in isolation, i.e. isolated batching"
     required: false
+  flavor:
+    description: "Type of tests to run. Default: [native]. Possible values: [native, js-test-appium, python-robotframework-appium]"
+    required: false
+  filterFile:
+    description: "File containing test filters in YAML format, following the schema described at https://docs.marathonlabs.io/runner/configuration/filtering/#filtering-logic. For iOS see also https://docs.marathonlabs.io/runner/next/ios#test-plans."
+    required: false
 branding:
   color: purple
   icon: play-circle
@@ -47,7 +53,7 @@ runs:
       with:
         version: ${{ inputs.version }}
     - name: Run tests using marathon-cloud
-      uses: MarathonLabs/action-invoke@0.3.2
+      uses: MarathonLabs/action-invoke@0.3.4
       with:
         apiKey: ${{ inputs.apiKey }}
         application: ${{ inputs.application }}
@@ -58,3 +64,5 @@ runs:
         link: ${{ inputs.link }}
         output: ${{ inputs.output }}
         isolated: ${{ inputs.isolated }}
+        flavor: ${{ inputs.flavor }}
+        filterFile: ${{ inputs.filterFile }}
