--- a/.github/workflows/manual_trigger.yaml
+++ b/.github/workflows/manual_trigger.yaml
@@ -4,23 +4,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_android:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build TypeScript
-        run: npm run build
 
       - name: Run tests
         uses: ./
@@ -29,7 +18,7 @@ jobs:
           application: "example/app.apk"
           testApplication: "example/appTest.apk"
           platform: android
-          name: "3_0"
+          name: "android_3_0"
           output: "output"
           outputGlob: "tests/**"
           version: "1.0.15"
@@ -39,3 +28,28 @@ jobs:
         with:
           name: output
           path: output
+
+  build_ios:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Run tests parallel
+        uses: ./
+        with:
+          apiKey: ${{ secrets.MARATHON_CLOUD_API_TOKEN }}
+          application: "example/sample.zip"
+          testApplication: "example/sampleUITests-Runner.zip"
+          platform: ios
+          name: "ios_3_0"
+          output: "output2"
+          outputGlob: "tests/**"
+          version: "1.0.15"
+
+      - name: Upload artifact parallel
+        uses: actions/upload-artifact@v2
+        with:
+          name: output2
+          path: output2
