feat: pull-files support (#19)

--- a/action.yaml
+++ b/action.yaml
@@ -67,6 +67,9 @@ inputs:
   ignoreTestFailures:
     description: "When tests fail and this option is true then GHA will exit with code 0. By default, GHA will exit with code 1 in case of test failures and 0 for passing tests [possible values: true, false]"
     required: false
+  pullFiles:
+    description: "Pull files from devices after the test run. The format is 'ROOT1:PATH1,ROOT2:PATH2' where ROOT is one of [EXTERNAL_STORAGE, APP_DATA] and PATH is a relative path to the target file or directory. Example: EXTERNAL_STORAGE:Documents/some-results,APP_DATA:files/my_folder/some_file.txt. Note: Files with the same name and path from different devices may overwrite each other."
+    required: false
 branding:
   color: purple
   icon: play-circle
@@ -78,7 +81,7 @@ runs:
       with:
         version: ${{ inputs.version }}
     - name: Run tests using marathon-cloud
-      uses: MarathonLabs/action-invoke@1.0.6
+      uses: MarathonLabs/action-invoke@1.0.7
       with:
         apiKey: ${{ inputs.apiKey }}
         application: ${{ inputs.application }}
@@ -101,3 +104,4 @@ runs:
         xctestrunEnv: ${{ inputs.xctestrunEnv }}
         xctestrunTestEnv: ${{ inputs.xctestrunTestEnv }}
         ignoreTestFailures: ${{ inputs.ignoreTestFailures }}
+        pullFiles: ${{ inputs.pullFiles }}
